error syncronization code